[package]
name = "r64drive"
version = "0.2.0"
authors = ["Andrew Wygle <awygle@gmail.com>"]
edition = "2018"
description = "A Rust API for the 64Drive N64 Development Cartridge's USB Interface"
repository = "https://github.com/awygle/r64drive"
keywords = ["n64", "usb", "ftdi"]
categories = ["api-bindings", "hardware-support"]
license = "Apache-2.0"

[dependencies]
safe-ftdi = "0.2.1"
byteorder = "1.3.1"
num = "0.2.0"
num-derive = "0.2.5"
num-traits = "0.2.6"
